search front end

--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -27,3 +27,11 @@
   height: 1.2rem;
   width: 1.2rem;
 }
+
+
+/************************************************************************************/
+/*Exercice*/
+
+.container{
+  padding-top: 100px;
+}
