--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,10 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>App component</title>
-  </head>
-  <body>
-    <app-menu></app-menu>
-   </body>
-</html>
+<div class="container">
+    <div class="row">
+        <app-navbar></app-navbar>
+        <app-search></app-search>
+    </div>
+</div>
 
-<router-outlet></router-outlet>
+
 
 
