--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,1 @@
-<div class="container">
-    <div class="row">
-        <app-navbar></app-navbar>
-        <app-search></app-search>
-    </div>
-</div>
-
-
-
-
+<router-outlet></router-outlet>
