--- a/src/app/search/search.component.css
+++ b/src/app/search/search.component.css
@@ -1,7 +1,10 @@
+.row{
+    display: flex;
+    justify-content: center;
+}
 h1{
     padding-top: 8rem;
 }
 form{
-    padding-left: 20%;
     padding-top: 2rem;
 }
