--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,6 +1,15 @@
-<h1>Current weather and forecast</h1>
-<form class="form-inline my-2 my-lg-0" (ngSubmit)="onSearchWeather(search)" #search="ngForm">
-    <input class="form-control mr-sm-2" type="text" placeholder="Country, city, coordinates..." aria-label="Search" name="search" ngModel>
-    <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
-</form>
-<!--TODO search button to trigger get request-->
+<app-navbar></app-navbar>
+<!--Search feature-->
+<div class="container">
+    <div class="row">
+        <h1>Current weather and forecast</h1>
+    </div>
+    <div class="row">
+        <!--Submitting the search enables the method onSearchWeather-->
+        <form class="form-inline my-2 my-lg-0" (ngSubmit)="onSearchWeather(input)" #input="ngForm">
+            <input class="form-control mr-sm-2" type="text" placeholder="Country, city, coordinates..." aria-label="Search" name="location" ngModel required>
+            <button class="btn btn-outline-primary my-2 my-sm-0" type="submit" [disabled]="input.invalid">Search</button>
+        </form>
+        <!--Disables the Search button while the box is empty-->
+    </div>
+</div>
