--- a/src/app/search/search.component.css
+++ b/src/app/search/search.component.css
@@ -1,10 +1,13 @@
+.container{
+    padding-top: 8rem;
+}
 .row{
     display: flex;
     justify-content: center;
 }
-h1{
-    padding-top: 8rem;
+p{
+    text-align: center;
 }
 form{
-    padding-top: 2rem;
+    padding-top: 0.5rem;
 }
