Current weather feature

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -4,7 +4,7 @@
   <!--Top left weather icon-->
   <div class="navbar-header"> <!--For correct display on phones-->
     <a class="navbar-brand" href="/">
-      <img class="weather-icon" src="https://freesvg.org/img/1277950229.png" alt="Weather icon">
+      <img class="weather-icon" src="../../assets/clouds.png" alt="Weather icon">
     </a>
   </div>
   <div class="navbar-nav"><span class="navbar-text">{{title}}</span></div>
@@ -26,17 +26,17 @@
 
       <!--Language selector-->
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" id="dropdown02" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#en"><span class="flag-icon flag-icon-en"> </span><img class="us-flag" src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/88/United-states_flag_icon_round.svg/512px-United-states_flag_icon_round.svg.png" alt="US flag">  English</a>
+        <a class="nav-link dropdown-toggle" id="dropdown02" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#en"><span class="flag-icon flag-icon-en"> </span><img class="us-flag" src="../../assets/usa-flag.png" alt="US flag">  English</a>
         <div class="dropdown-menu" aria-labelledby="dropdown02">
-          <a class="dropdown-item" href="#fr"><span class="flag-icon flag-icon-fr"> </span><img class="fr-flag" src="https://cdn.countryflags.com/thumbs/france/flag-round-250.png" alt="French flag">  French</a>
-          <a class="dropdown-item" href="#es"><span class="flag-icon flag-icon-es"> </span><img class="sp-flag" src="https://pngimg.com/uploads/spain/spain_PNG48.png" alt="Spanish flag">  Spanish</a>
+          <a class="dropdown-item" href="#fr"><span class="flag-icon flag-icon-fr"> </span><img class="fr-flag" src="../../assets/fr-flag.png" alt="French flag">  French</a>
+          <a class="dropdown-item" href="#es"><span class="flag-icon flag-icon-es"> </span><img class="sp-flag" src="../../assets/sp-flag.png" alt="Spanish flag">  Spanish</a>
         </div>
       </li>
       
       <!--Github logo and link-->
       <li class="nav-item">
         <a class="nav-link" href="https://github.com/thibault-gilg/weather-app-angular" target="_blank" rel="noopener" aria-label="GitHub">
-          <img class="github-logo" src="https://getdrawings.com/free-icon-bw/github-icon-23.png" alt="Github logo">
+          <img class="github-logo" src="../../assets/github-icon.png" alt="Github logo">
         </a>
       </li>
     </ul>
