--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -12,7 +12,7 @@
         <!--Submitting the search enables the method onSearchWeather-->
         <form class="form-inline my-2 my-lg-0" (ngSubmit)="onSubmitSearch()" [formGroup]="weatherSearchForm">
             <input class="form-control mr-sm-2" type="text" placeholder="Country, city, coordinates..." aria-label="Search" formControlName="location">
-            <span *ngIf="location.invalid">Invalid input</span>
+            <span *ngIf="location.invalid"></span>
             <button class="btn btn-outline-primary my-2 my-sm-0" type="submit" [disabled]="weatherSearchForm.invalid" >Search</button>
         </form>
         <!--Disables the Search button while the box is empty-->
@@ -20,4 +20,5 @@
 </div>
 
 <app-current-weather ></app-current-weather>
+<app-forecast-weather></app-forecast-weather>
 
