--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,21 +1,23 @@
+<app-navbar></app-navbar>
+
 <!--Search feature-->
 <div class="container">
     <div class="row">
-        <h1>Current weather and forecast</h1>
+        <h1>{{'search.header' | translate}}</h1>
     </div>
     <div class="row">
-        <p>Please enter geographic coordinates in the Decimal degrees (DD) format whithout whitespace.<br>
-            (ex : 30.389089,-97.756294)
+        <p>{{'search.instructions' | translate}}<br>
+            (ex: 30.27,-97.76)
         </p>
     </div>
     <div class="row">
-        <!--Submitting the search enables the method onSearchWeather-->
+        <!--Submitting the search enables the method onSubmitSearch-->
         <form class="form-inline my-2 my-lg-0" (ngSubmit)="onSubmitSearch()" [formGroup]="weatherSearchForm">
-            <input class="form-control mr-sm-2" type="text" placeholder="Country, city, coordinates..." aria-label="Search" formControlName="location">
-            <span *ngIf="location.invalid"></span>
-            <button class="btn btn-outline-primary my-2 my-sm-0" type="submit" [disabled]="weatherSearchForm.invalid" >Search</button>
+            <input class="form-control mr-sm-2" type="text" placeholder="{{'search.input' | translate}}" aria-label="Search" formControlName="input">
+            <span *ngIf="input.invalid"></span>
+            <!--Search button disabled until input is valid-->
+            <button class="btn btn-outline-primary my-2 my-sm-0" type="submit" [disabled]="weatherSearchForm.invalid" >{{'search.button' | translate}}</button>
         </form>
-        <!--Disables the Search button while the box is empty-->
     </div>
 </div>
 
