--- a/src/app/forecast-weather/forecast-weather.component.css
+++ b/src/app/forecast-weather/forecast-weather.component.css
@@ -1,15 +1,12 @@
-/*button{
-    background-color: #03073b;
-    border: 2px solid #03073b;
-}*/
 .container{
-    display: flex;
-    justify-content: center;
-    float: left;
+    margin: auto;
+    width: 20%;
 }
 button{
     margin-right: 0.2rem;
     margin-left: 0.2rem;
 }
-
+.forecast-weather{
+    text-align: center;
+}
 
