--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,42 +1,74 @@
-
+<!--Top navigation bar-->
 <nav class="navbar navbar-expand-md navbar-dark fixed-top">
 
   <!--Top left weather icon-->
-  <div class="navbar-header"> <!--For correct display on phones-->
+  <div class="navbar-header">
     <a class="navbar-brand" href="/">
-      <img class="weather-icon" src="../../assets/clouds.png" alt="Weather icon">
+      <img class="weather-icon" src="../../assets/images/clouds.png" alt="Weather icon">
     </a>
   </div>
-  <div class="navbar-nav"><span class="navbar-text">{{title}}</span></div>
+  <div class="navbar-nav">
+    <span class="navbar-text">{{'navbar.title' | translate}}</span>
+  </div>
 
   <!--Toggle button for small screens-->
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
+    aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse" id="navbarsExampleDefault">      
+  <div class="collapse navbar-collapse" id="navbarsExampleDefault">
     <ul class="navbar-nav ml-auto">
 
-      <!--Temperature system-->
+      <!--Unit selection-->
+      <li class="select">
+        <select name="units" id="units" #unitSelect (change)="saveUnit(unitSelect.value)">
+          <option *ngFor="let unit of units | keyvalue" [value]="unit.key">
+            {{unit.value}}
+          </option>
+        </select>
+      </li>
+
+      <!--Language selection-->
+      <li class="select">
+        <select name="lang" id="lang" #langSelect (change)="translate.use(langSelect.value) && reloadPage()">
+          <option *ngFor="let lang of translate.getLangs()" [value]="lang"
+            [attr.selected]="lang === translate.currentLang ? '' : null">
+            {{lang}}
+          </option>
+        </select>
+      </li>
+
+      <!--
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#">°C</a>
+        <a class="nav-link dropdown-toggle" id="dropdown01" data-toggle="dropdown" aria-haspopup="true"
+          aria-expanded="false">
+          Temperature system
+        </a>
         <div class="dropdown-menu" aria-labelledby="dropdown01">
           <a class="dropdown-item" href="#imperial">°F</a>
+          <a class="dropdown-item" href="#metrics">°C</a>
         </div>
       </li>
 
-      <!--Language selector-->
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" id="dropdown02" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#en"><span class="flag-icon flag-icon-en"> </span><img class="us-flag" src="../../assets/usa-flag.png" alt="US flag">  English</a>
+        <a class="nav-link dropdown-toggle" id="dropdown02" data-toggle="dropdown" aria-haspopup="true"
+          aria-expanded="false">
+          Language
+        </a>
         <div class="dropdown-menu" aria-labelledby="dropdown02">
-          <a class="dropdown-item" href="#fr"><span class="flag-icon flag-icon-fr"> </span><img class="fr-flag" src="../../assets/fr-flag.png" alt="French flag">  French</a>
-          <a class="dropdown-item" href="#es"><span class="flag-icon flag-icon-es"> </span><img class="sp-flag" src="../../assets/sp-flag.png" alt="Spanish flag">  Spanish</a>
+          <a class="dropdown-item" href="#en"><span class="flag-icon flag-icon-en"> </span><img class="us-flag"
+              src="../../assets/images/usa-flag.png" alt="US flag"> English</a>
+          <a class="dropdown-item" href="#fr"><span class="flag-icon flag-icon-fr"> </span><img class="fr-flag"
+              src="../../assets/images/fr-flag.png" alt="French flag"> French</a>
         </div>
-      </li>
-      
+      </li>-->
+
+
       <!--Github logo and link-->
       <li class="nav-item">
-        <a class="nav-link" href="https://github.com/thibault-gilg/weather-app-angular" target="_blank" rel="noopener" aria-label="GitHub">
-          <img class="github-logo" src="../../assets/github-icon.png" alt="Github logo">
+        <a class="nav-link" href="https://github.com/thibault-gilg/weather-app-angular" target="_blank" rel="noopener"
+          aria-label="GitHub">
+          <img class="github-logo" src="../../assets/images/github-icon.png" alt="Github logo">
         </a>
       </li>
     </ul>
