--- a/src/app/current-weather/current-weather.component.html
+++ b/src/app/current-weather/current-weather.component.html
@@ -1,47 +1,87 @@
-<!--Display current weather results-->
-<div class="container">
-    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 current-weather" *ngIf="this.currentWeather">
-        <p class="text">
-            <img src="http://openweathermap.org/img/wn/{{this.currentWeather.weather[0].icon}}@2x.png" alt="Weather icon">
-            <span class="main">{{this.currentWeather.name}}, {{this.currentWeather.sys.country}}
-                {{this.currentWeather.main.temp}}<span *ngIf="this.isImperial(); else metric"> °F</span>
-                <ng-template #metric> °C</ng-template>
-            </span><br />
-            {{this.currentWeather.weather[0].description | titlecase}}<br />
-            <!--Unix timestamp conversion with date pipe-->
-            {{this.currentWeather.dt*1000 | date:'MM/dd/yyyy, h:mm a'}}<br/>
-        </p>
-        <table class="table table-bordered table-striped">
-            <tbody>
-                <tr>
-                    <th scope="row">{{'weather.local_time' | translate}}</th>
-                    <td>{{this.localTime | date:'h:mm a'}}</td>
-                    <th scope="row">{{'weather.wind_speed' | translate}}</th>
-                    <td>{{this.currentWeather.wind.speed}}<span *ngIf="this.isImperial(); else meter"> mph</span>
-                        <ng-template #meter> m/s</ng-template>
-                    </td>
-                </tr>
-                <tr>
-                    <th scope="row">{{'weather.feels_like' | translate}}</th>
-                    <td>{{this.currentWeather.main.feels_like}}<span *ngIf="this.isImperial(); else metric"> °F</span>
-                        <ng-template #metric> °C</ng-template>
-                    </td>
-                    <th scope="row">{{'weather.clouds' | translate}}</th>
-                    <td>{{this.currentWeather.clouds.all}} %</td>
-                </tr>
-                <tr>
-                    <th scope="row">{{'weather.humidity' | translate}}</th>
-                    <td>{{this.currentWeather.main.humidity}} %</td>
-                    <th scope="row">{{'weather.sunrise' | translate}}</th>
-                    <td>{{this.currentWeather.sys.sunrise*1000 | date: 'h:mm a'}}</td>
-                </tr>
-                <tr>
-                    <th scope="row">{{'weather.pressure' | translate}}</th>
-                    <td>{{this.currentWeather.main.pressure}} hPa</td>
-                    <th scope="row">{{'weather.sunset' | translate}}</th>
-                    <td>{{this.currentWeather.sys.sunset*1000 | date: 'h:mm a'}}</td>
-                </tr>
-            </tbody>
-        </table>
+<app-navbar></app-navbar>
+
+<!--Search-->
+<div class="container" id="search">
+    <div class="row">
+        <h1>{{'search.header' | translate}}</h1>
+    </div>
+    <div class="row">
+        <ul>
+            <li>{{'search.coordinates' | translate}}(30.27, -97.76).</li>
+            <li>{{'search.codes' | translate}}</li>
+            <li>{{'search.us_states' | translate}}</li>
+        </ul>
+    </div>
+    <div class="row">
+        <!--Submitting the form enables the method onSubmitSearch-->
+        <form (ngSubmit)="onSubmitSearch()" [formGroup]="weatherSearchForm">
+            <div class="form-row align-items-center">
+                <div class="col-sm-4 my-1">
+                    <label class="sr-only" for="inlineFormInputCity">City or GPS coordinates</label>
+                    <input class="form-control" type="text" placeholder="{{'search.location' | translate}}"
+                        formControlName="location">
+                </div>
+                <div class="col-sm-2 my-1">
+                    <label class="sr-only" for="inlineFormInputGroupState">State code</label>
+                    <input type="text" class="form-control" placeholder="{{'search.state_code' | translate}}"
+                        formControlName="stateCode">
+                </div>
+                <div class="col-sm-2 my-1">
+                    <label class="sr-only" for="inlineFormInputGroupCountry">Country</label>
+                    <input type="text" class="form-control" placeholder="{{'search.country_code' | translate}}"
+                        formControlName="countryCode">
+                </div>
+                <div class="col-auto my-1">
+                    <!--Search button disabled until input is valid-->
+                    <button class="btn btn-outline-primary" type="submit"
+                        [disabled]="weatherSearchForm.invalid">{{'search.button' | translate}}</button> </div>
+            </div>
+        </form>
+    </div>
+    <!--Display current weather results-->
+    <div class="container" id="weather">
+        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 current-weather" *ngIf="this.currentWeather">
+            <p>
+                <img src="http://openweathermap.org/img/wn/{{this.currentWeather.weather[0].icon}}@2x.png"
+                    alt="Weather icon">
+                <span>{{this.currentWeather.name}}, {{this.currentWeather.sys.country}}
+                    {{this.currentWeather.main.temp}} {{this.cookie.get("unit")}}
+                </span><br />
+                {{this.currentWeather.weather[0].description | titlecase}}<br />
+                <!--Unix timestamp conversion with date pipe-->
+                {{this.currentWeather.dt*1000 | date:'MM/dd/yyyy, h:mm a'}}<br />
+                ({{this.cookie.get("location")}})
+            </p>
+            <table class="table table-bordered table-striped">
+                <tbody>
+                    <tr>
+                        <th scope="row">{{'weather.local_time' | translate}}</th>
+                        <td>{{this.localTime | date:'h:mm a'}}</td>
+                        <th scope="row">{{'weather.wind_speed' | translate}}</th>
+                        <td>{{this.currentWeather.wind.speed}} {{this.cookie.get("speed")}}</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">{{'weather.feels_like' | translate}}</th>
+                        <td>{{this.currentWeather.main.feels_like}} {{this.cookie.get("unit")}}</td>
+                        <th scope="row">{{'weather.clouds' | translate}}</th>
+                        <td>{{this.currentWeather.clouds.all}} %</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">{{'weather.humidity' | translate}}</th>
+                        <td>{{this.currentWeather.main.humidity}} %</td>
+                        <th scope="row">{{'weather.sunrise' | translate}}</th>
+                        <td>{{this.currentWeather.sys.sunrise*1000 | date: 'h:mm a'}}</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">{{'weather.pressure' | translate}}</th>
+                        <td>{{this.currentWeather.main.pressure}} hPa</td>
+                        <th scope="row">{{'weather.sunset' | translate}}</th>
+                        <td>{{this.currentWeather.sys.sunset*1000 | date: 'h:mm a'}}</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
 </div>
+
+<app-forecast-weather></app-forecast-weather>
