--- a/src/app/current-weather/current-weather.component.css
+++ b/src/app/current-weather/current-weather.component.css
@@ -8,7 +8,7 @@
 #search form{
     padding-top: 0.5rem;
 }
-/*current weather*/
+/*current weather data*/
 #weather{
     padding-top: 2rem;
     display: flex;
